<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.tecii.android.practica4.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cant"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txtcant"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btncal"
        android:text="@string/calc"
        android:onClick="calcular"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantB"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d100"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txt100"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d50"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txt50"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d20"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txt20"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantM"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d5"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txt5"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d2"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txt2"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d1"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txt1"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantC"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d50"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txt_50"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d20"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txt_20"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d10"/>
        <EditText
            android:layout_width="@dimen/Text"
            android:layout_height="wrap_content"
            android:id="@+id/txt_10"/>
    </LinearLayout>
</LinearLayout>
